Finsished Desktop View

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="./images/Charvine.ico"/>
     <title> Social Media Dashboard with Theme Switch </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" media="(min-width: 1050px)" href="socialmedia2.css"/>
   </head>
 
   <body id="background-holder">
@@ -78,7 +79,7 @@
           </div>
         </div>
 
-        <div id="social-info" style="background-color: transparent;">
+        <div id="social-info" style="background-color: transparent; width: 95%;">
           <h1 id="present-overview"> Overview - Today</h1>
         </div>
 
